- Fixed bug #45139 (ReflectionProperty returns incorrect declaring class)